# LightSim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TEST_COVERAGE_ANALYSIS.md  pyproject.toml
examples/: README.md  custom_network.py  demo.ipynb  ev_corridor.py  json_network.py  load_pretrained.py  max_pressure.py  mesoscopic.py  multi_agent.py  osm_training_pipeline.py  quickstart.py  record_and_replay.py  validated_network.py
lightsim/: __init__.py  pretrained.py
results/: arterial_and_efficientmp.json  arterial_cross_validation.json  comprehensive_eval.json  cross_validation.json  cross_validation_grid.json  cross_validation_mesoscopic.json  dt_evaluation.json  fundamental_diagram.json  fundamental_diagram_full.json  multi_agent_dt.json  multi_agent_grid.json  multi_agent_rl.json  osm_city_eval_checkpoint.json  osm_city_evaluation.json  oversaturated_experiment.json  reward_ablation.json  rl_baselines_with_delay.json  rl_crossval_checkpoint.json  rl_crossval_grid.json  rl_crossval_grid_checkpoint.json  rl_crossval_results.json  rl_mesoscopic_experiment.json  rl_training.json  rl_training_5seeds.json  rl_with_delay.json  sample_efficiency.json  sample_efficiency_checkpoint.json  speed_benchmark.json  sumo_comparison.json  sumo_grid_aligned.json  transfer_experiment.json
scripts/: README.md  arterial_cross_validation.py  cross_validation_mesoscopic.py  dt_evaluate.py  dt_evaluate_multi.py  evaluate_pretrained.py  fix_sumo_grid_demand.py  gen_fig1_matplotlib.py  gen_fig1_paperbanana.py  gen_osm_figure.py  generate_demo_gif.py  generate_figures.py  multi_agent_experiment.py  multi_agent_rl.py  osm_city_evaluation.py  oversaturated_experiment.py  reward_ablation.py  rl_5seeds.py  rl_cross_validation.py  rl_crossval_grid.py  rl_mesoscopic_experiment.py  sample_efficiency.py  train_pretrained.py  transfer_experiment.py  validate_fd_full.py
tests/: test_all_controllers.py  test_ctm.py  test_decision_transformer.py  test_demand.py  test_demand_validation.py  test_edge_cases.py  test_engine.py  test_engine_numerical.py  test_env_multi.py  test_env_single.py  test_ev_tracker.py  test_examples.py  test_json_io.py  test_max_pressure.py  test_mesoscopic.py  test_metrics.py  test_network.py  test_network_generators.py  test_observations_actions.py  test_osm.py  test_pretrained.py  test_rewards.py  test_rl_baselines.py  test_signal_edge_cases.py  test_speed_benchmark.py  (+4 more)
(+49 files in other folders)
